// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1655918218170,
      "mascota": "Negrito",
      "propietario": "Miguel",
      "sintomas": "Solo duerme",
      "telefono": "55986628",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar nuevas funciones 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1655918218170,
      "mascota": "Hook",
      "propietario": "Miguel",
      "sintomas": "Solo duerme",
      "telefono": "55986628",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
